create test document endpoint